--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,7 @@
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     font-size: 18px;
+    
 }
 
 .header-menu {
@@ -68,7 +69,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 757px;
-    background-image: url(/images/cover.jpg);
+    background-image: url(../images/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     z-index: -2;
@@ -200,19 +201,19 @@
 }
 
 .card-type-film {
-    background-image: url(/images/card-lot-01.jpg);
+    background-image: url(../images/card-lot-01.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .card-type-book {
-    background-image: url(/images/card-lot-02.jpg);
+    background-image: url(../images/card-lot-02.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .card-type-picture {
-    background-image: url(/images/card-lot-03.jpg);
+    background-image: url(../images/card-lot-03.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
