--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,10 @@
 }
 
 .overlay {
-  opacity: 0.6;
-  background-color: #000;
+  background-color: rgb(0 0 0/0.6);
+  position: absolute;
+  inset: 0;
+  z-index: 1;
 }
 
 .adress {
@@ -17,6 +19,10 @@
 
 .adress-list {
   list-style-type: none;
+}
+
+.adress-text{
+  max-width: 237px; /*ревьюер написал не использовать <br>, поэтому написана максимальная шарина, подобранная подгонкой*/
 }
 
 .header {
@@ -39,7 +45,6 @@
 
 .header-menu-item {
   margin-left: 32px;
-  white-space: nowrap;
 }
 
 .header-menu-item-active {
@@ -62,29 +67,22 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 757px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: -2;
-  align-items: space-between;
-}
-
-.cover .overlay {
-  position: absolute;
-  inset: 0;
-  z-index: -1;
+  background-position: center;
+  z-index: 3;
 }
 
 .cover-title {
+  position: relative;
+  z-index: 1;
   display: grid;
   row-gap: 10px;
-  padding: 165px 50px 0;
+  margin: 165px 50px 0;
 
   color: #fff;
-  font-family: Raleway;
   font-size: 100px;
-  font-style: normal;
   font-weight: 700;
   letter-spacing: 30px;
   text-transform: uppercase;
@@ -101,6 +99,7 @@
 
 .align-text-right {
   justify-self: end;
+  padding-bottom: 120px;
 }
 
 .letter-spaicing-extended {
@@ -108,12 +107,14 @@
 }
 
 .no-letter-spacing {
-  letter-spacing: 0;
+  letter-spacing: initial;
 }
 
 .cover-description {
-  padding-bottom: 50px;
-  padding-right: 50px;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 50px;
+  margin-right: 50px;
   display: flex;
   justify-content: flex-end;
 }
@@ -151,7 +152,7 @@
 }
 
 .lots-heading {
-  padding-left: 40px;
+  margin-left: 40px;
   margin-bottom: 27px;
   color: #000;
   font-size: 40px;
@@ -169,7 +170,7 @@
 
 .lots-card-list-item {
   min-height: 450px;
-  max-width: 430px;
+  width: 430px;
   flex-grow: 1;
 }
 
@@ -185,37 +186,28 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-.card .overlay {
-  position: absolute;
-  inset: 0;
-  z-index: 1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card-type-film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card-type-book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card-type-picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .card-title {
   position: relative;
-  z-index: 2;
+  z-index: 1;
 
-  padding: 50px 40px 0;
+  margin: 50px 40px 0;
   color: #fff;
   font-size: 22px;
   font-weight: 700;
@@ -224,16 +216,16 @@
 }
 
 .card-text {
-  padding: 0 40px 50px 40px;
+  margin: 0 40px 50px 40px;
   position: relative;
-  z-index: 2;
+  z-index: 1;
   color: #fff;
   font-size: 20px;
   font-weight: 400;
 }
 
 .lots-look-more-link {
-  padding-left: 40px;
+  margin-left: 40px;
 
   color: #000;
   font-size: 20px;
@@ -246,7 +238,7 @@
 
 .about-column {
   display: grid;
-  grid-template-columns: 430px auto;
+  grid-template-columns: 430px 1fr;
   gap: 25px;
   align-items: start;
   justify-items: center;
@@ -316,7 +308,7 @@
 }
 
 .footer-social-icon {
-  max-height: 48px;
+  height: 48px;
   /*в сафари и опере без указания максимальной высоты всё выводится корректно, 
     но в гугле без указания выводятся значки много большего размера*/
 }
